Syncing first 1/3 of Java and Python sheets w/ TS.

--- a/typescript/Control Flow.ipynb
+++ b/typescript/Control Flow.ipynb
@@ -671,9 +671,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d3f8463",
+   "metadata": {},
+   "source": [
+    "# Exception Types\n",
+    "\n",
+    "```\n",
+    "Built-in Exceptions\n",
+    "  Error\n",
+    "    best practice is inherit from this\n",
+    "    though technically you can throw anything\n",
+    "  ReferenceError\n",
+    "  TypeError\n",
+    "  RangeError (for index issues)\n",
+    "Exception Members\n",
+    "  typically at least 'message' and 'name'\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "907bd052",
+   "id": "df37682d",
    "metadata": {},
    "outputs": [],
    "source": []
