--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "1c304f08",
    "metadata": {},
    "outputs": [
@@ -728,6 +728,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1,2,3,4,5\n",
+      "12345\n",
       "1,2,3,4,5\n"
      ]
     },
@@ -737,7 +739,7 @@
        "undefined"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,6 +748,8 @@
     "(() => {\n",
     "    const a = [1, 2, 3, 4, 5];\n",
     "    console.log(a.join(','));\n",
+    "    console.log(a.join(''));\n",
+    "    console.log(a.join()); // comma is the default\n",
     "})();"
    ]
   },
@@ -760,9 +764,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88749ea9",
+   "metadata": {},
+   "source": [
+    "# console.log() and toString()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "67ac0c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: 100, toString: [Function: toString] }\n",
+      "100\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const o = {\n",
+    "        x: 100,\n",
+    "        toString() {return this.x;}\n",
+    "    };\n",
+    "    \n",
+    "    console.log(o); // doesn't use\n",
+    "    console.log(o.toString()); // uses\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52498fe9",
+   "metadata": {},
+   "source": [
+    "# Concatenation is Weird\n",
+    "\n",
+    "When given the chance, JS will try to convert anything into string automatically when concatenated with `+`, even if none of the operands is a string.  For objects, it will use `toString()` if available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7074ef65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3hi\n",
+      "1,22,3\n",
+      "7hi\n",
+      "3yo\n",
+      "[object Object]3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    console.log(3 + 'hi');\n",
+    "    console.log(([1, 2] as any) + ([2, 3] as any)); // 'any' to get past TS compiler\n",
+    "    console.log(3 + 4 + 'hi');\n",
+    "    \n",
+    "    const o = {toString() {return 'yo';}}\n",
+    "    console.log((3 as any) + o);\n",
+    "    console.log(({} as any) + 3);\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a6a8a90",
+   "metadata": {},
+   "source": [
+    "# Start Index\n",
+    "\n",
+    "Methods like `startsWith()` have optional start index so you don't have to break the strings just for that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed91c84",
+   "metadata": {},
+   "source": [
+    "# Sorting String\n",
+    "\n",
+    "This doesn't work in Jupyter because it needs ES6, but it works in Chrome Devtools."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6510688a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 4, Character 21\n    const a = Array.from(s);\n____________________^\nTS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 4, Character 21",
+      "    const a = Array.from(s);",
+      "____________________^",
+      "TS2550: Property 'from' does not exist on type 'ArrayConstructor'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const s = 'dbae';\n",
+    "    \n",
+    "    const a = Array.from(s);\n",
+    "    a.sort();\n",
+    "    \n",
+    "    const sSorted = a.join();\n",
+    "    console.log(sSorted);\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5de7fc",
+   "metadata": {},
+   "source": [
+    "# Format Specifiers\n",
+    "\n",
+    "Not present."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e30214",
+   "metadata": {},
+   "source": [
+    "# Case Insensitivity\n",
+    "\n",
+    "Not built-in - typically would convert both to __lowercase__ first.  `toLocaleString()` and `normalize()` may also be of help for non-english."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2560474a",
+   "id": "32918f14",
    "metadata": {},
    "outputs": [],
    "source": []
