--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "d323e336",
    "metadata": {},
    "outputs": [
@@ -285,12 +285,16 @@
     "// Don't-care values (_, __, etc.)\n",
     "const [fruit2, _, quantity2] = tuple2;\n",
     "console.log(fruit2);\n",
-    "console.log(quantity2);"
+    "console.log(quantity2);\n",
+    "\n",
+    "// Tuples are a TS feature\n",
+    "// They are actually arrays underneath\n",
+    "// const t = new Tuple(); // not a real class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "id": "1e0f251b",
    "metadata": {},
    "outputs": [
@@ -298,15 +302,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "apple\r\n",
-      "\u001b[33mtrue\u001b[39m\r\n",
-      "\u001b[33m2\u001b[39m\r\n",
-      "\u001b[33m3\u001b[39m\r\n",
-      "orange\r\n",
-      "\u001b[33mtrue\u001b[39m\r\n",
-      "\u001b[33m10\u001b[39m\r\n",
-      "orange\r\n",
-      "\u001b[33m10\u001b[39m\r\n"
+      "apple\n",
+      "\u001b[33mtrue\u001b[39m\n",
+      "\u001b[33m2\u001b[39m\n",
+      "\u001b[33m3\u001b[39m\n",
+      "orange\n",
+      "\u001b[33mtrue\u001b[39m\n",
+      "\u001b[33m10\u001b[39m\n",
+      "orange\n",
+      "\u001b[33m10\u001b[39m\n"
      ]
     }
    ],
@@ -915,7 +919,9 @@
    "source": [
     "# Negative Indices\n",
     "\n",
-    "No (unlike Python)"
+    "Not allowed in `[]`, but allowed in methods that take indices (eg. `splice`, `slice`, etc.).\n",
+    "\n",
+    "Count back from end of array just like Python."
    ]
   },
   {
@@ -950,9 +956,582 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e6d023a",
+   "metadata": {},
+   "source": [
+    "# Sorting\n",
+    "\n",
+    "Arrays can be sorted immutably via `toSorted()` or mutably via `sort()`.  Either one can do a default sort, which converts items to strings and sorts lexographically, or by a comparator function (<0, 0, >0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5a5e90d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/sorting.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/sorting.ts\n",
+    "\n",
+    "const a = [1, 2, 3, 11];\n",
+    "console.log((a as any).toSorted()); // TS doesn't see toSorted() here for some reason\n",
+    "a.sort();\n",
+    "console.log(a);\n",
+    "\n",
+    "a.sort((a, b) => a - b);\n",
+    "console.log(a);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61492da9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m1\u001b[39m, \u001b[33m11\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m11\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m11\u001b[39m ]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/sorting.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "283ed25c",
+   "metadata": {},
+   "source": [
+    "# Spread Operators\n",
+    "\n",
+    "The `...` operator works on any iterable and can be used to include an iterable's elements in-place anywhere in an array."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce70d67b",
+   "metadata": {},
+   "source": [
+    "# Array Splicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "3b076d5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/splicing.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/splicing.ts\n",
+    "\n",
+    "// Split array\n",
+    "let a = [1, 2, 3, 4, 5];\n",
+    "let b = a.splice(2);\n",
+    "console.log('splitting');\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "\n",
+    "// Removing from middle\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "b = a.splice(2, 2);\n",
+    "console.log('removing from middle')\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "\n",
+    "// Replacing\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "b = a.splice(2, 2, 100, 200, 300);\n",
+    "console.log('replacing in middle');\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "\n",
+    "// Inserting\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "b = a.splice(2, 0, 100, 200, 300);\n",
+    "console.log('inserting');\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "\n",
+    "// Negative index\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "b = a.splice(-2);\n",
+    "console.log('negative index');\n",
+    "console.log(a);\n",
+    "console.log(b);\n",
+    "\n",
+    "// Immutability\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "b = (a as any).toSpliced(2, 2); // 'any' only required due to TS for some reason\n",
+    "console.log('immutability');\n",
+    "console.log(a);\n",
+    "console.log(b);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "612d60f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "splitting\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m ]\r\n",
+      "[ \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "removing from middle\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "[ \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ]\r\n",
+      "replacing in middle\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m200\u001b[39m, \u001b[33m300\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "[ \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ]\r\n",
+      "inserting\r\n",
+      "[\r\n",
+      "    \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m200\u001b[39m,\r\n",
+      "  \u001b[33m300\u001b[39m, \u001b[33m3\u001b[39m,   \u001b[33m4\u001b[39m,   \u001b[33m5\u001b[39m\r\n",
+      "]\r\n",
+      "[]\r\n",
+      "negative index\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m ]\r\n",
+      "[ \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "immutability\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m5\u001b[39m ]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/splicing.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f496c35",
+   "metadata": {},
+   "source": [
+    "# Filling Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "42af6b5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/filling.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/filling.ts\n",
+    "\n",
+    "console.log('fill whole array');\n",
+    "let a = [1, 2, 3, 4, 5];\n",
+    "a.fill(100);\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log('fill end of array');\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "a.fill(100, 2);\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log('fill region of array');\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "a.fill(100, 2, 3); // exclusive upper bound\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log('fill beyond end of array - rejected');\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "a.fill(100, 2, 10);\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log('return value of fill');\n",
+    "a = [1, 2, 3, 4, 5];\n",
+    "a = a.fill(100, 2);\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log('new filled array');\n",
+    "const b: number[] = new Array(5).fill(100);\n",
+    "console.log(b);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7c844e7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fill whole array\r\n",
+      "[ \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "fill end of array\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "fill region of array\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m ]\r\n",
+      "fill beyond end of array - rejected\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "return value of fill\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m ]\r\n",
+      "new filled array\r\n",
+      "[ \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m100\u001b[39m ]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/filling.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "313993ad",
+   "metadata": {},
+   "source": [
+    "# Grouping and Counting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "115e414e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/grouping.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/grouping.ts\n",
+    "\n",
+    "const a = [1, 2, 3, 4, 5, 6];\n",
+    "// const m = Map.groupBy(a, n => n % 2 == 0); // doesn't work in nodets\n",
+    "\n",
+    "const countDictionary = a.reduce((acc, value) => {\n",
+    "  acc[value] = (acc[value] || 0) + 1;\n",
+    "  return acc;\n",
+    "}, {} as any);\n",
+    "\n",
+    "console.log(countDictionary);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "da519afe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ \u001b[32m'1'\u001b[39m: \u001b[33m1\u001b[39m, \u001b[32m'2'\u001b[39m: \u001b[33m1\u001b[39m, \u001b[32m'3'\u001b[39m: \u001b[33m1\u001b[39m, \u001b[32m'4'\u001b[39m: \u001b[33m1\u001b[39m, \u001b[32m'5'\u001b[39m: \u001b[33m1\u001b[39m, \u001b[32m'6'\u001b[39m: \u001b[33m1\u001b[39m }\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/grouping.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d900ea3",
+   "metadata": {},
+   "source": [
+    "# Min/Max of Array\n",
+    "\n",
+    "Use spread operator with `Math.min()` and `Math.max()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39a3138b",
+   "metadata": {},
+   "source": [
+    "# Thread Safety\n",
+    "\n",
+    "Since JavaScript doesn't do multithreading within the same address space, you don't have the same issues as other languages.  So the collections are not thread safe and don't really need to be.  Although you can accidentally get subtle bugs due to things like `setTimeout()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "844387cb",
+   "metadata": {},
+   "source": [
+    "# Swap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "09a32d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing ts-files/swap.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/swap.ts\n",
+    "\n",
+    "let x = 10;\n",
+    "let y = 20;\n",
+    "\n",
+    "[x,y] = [y,x];\n",
+    "console.log(x, y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e452a3ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m20\u001b[39m \u001b[33m10\u001b[39m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/swap.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f7d6c0a",
+   "metadata": {},
+   "source": [
+    "# Deep Copying\n",
+    "\n",
+    "Not provided directly, but you could use `JSON.stringify()` followed by `JSON.parse()`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09d9d1ee",
+   "metadata": {},
+   "source": [
+    "## Customizing Printing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "07aa5548",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/printing.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/printing.ts\n",
+    "\n",
+    "const o = {\n",
+    "  x: 100,\n",
+    "  toString() {return this.x;}\n",
+    "};\n",
+    "console.log(o); // doesn't use\n",
+    "\n",
+    "const a = [o, o, o]; // doesn't use\n",
+    "console.log(a); // doesn't use\n",
+    "\n",
+    "console.log(o.toString()); // uses\n",
+    "console.log(a.toString()); // uses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "160ad75f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ x: \u001b[33m100\u001b[39m, toString: \u001b[36m[Function: toString]\u001b[39m }\r\n",
+      "[\r\n",
+      "  { x: \u001b[33m100\u001b[39m, toString: \u001b[36m[Function: toString]\u001b[39m },\r\n",
+      "  { x: \u001b[33m100\u001b[39m, toString: \u001b[36m[Function: toString]\u001b[39m },\r\n",
+      "  { x: \u001b[33m100\u001b[39m, toString: \u001b[36m[Function: toString]\u001b[39m }\r\n",
+      "]\r\n",
+      "\u001b[33m100\u001b[39m\r\n",
+      "100,100,100\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/printing.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f13b3ab",
+   "metadata": {},
+   "source": [
+    "# Ranges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ee9addde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/ranges.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/ranges.ts\n",
+    "\n",
+    "const a = [1, 2, , , 5];\n",
+    "console.log(Array.from(a.keys()));\n",
+    "console.log(Object.keys(a));\n",
+    "\n",
+    "const firstTen = Array.from(new Array(10).keys());\n",
+    "console.log(firstTen);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "16489735",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ \u001b[33m0\u001b[39m, \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ]\r\n",
+      "[ \u001b[32m'0'\u001b[39m, \u001b[32m'1'\u001b[39m, \u001b[32m'4'\u001b[39m ]\r\n",
+      "[\r\n",
+      "  \u001b[33m0\u001b[39m, \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m,\r\n",
+      "  \u001b[33m5\u001b[39m, \u001b[33m6\u001b[39m, \u001b[33m7\u001b[39m, \u001b[33m8\u001b[39m, \u001b[33m9\u001b[39m\r\n",
+      "]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/ranges.ts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c4861a3",
+   "metadata": {},
+   "source": [
+    "# Flattening Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "16d59bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ts-files/flatten.ts\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile ts-files/flatten.ts\n",
+    "\n",
+    "const a = [[1, 2], [3, 4]];\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log(a.flat()); // returns a flattened copy\n",
+    "console.log(a);\n",
+    "\n",
+    "console.log([[[1]], 2].flat()); // only 1 level\n",
+    "\n",
+    "// repeating an array 5 times\n",
+    "console.log((new Array(5)).fill([1, 2, 3, 4, 5]).flat());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "9d0b08b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ [ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m ], [ \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ] ]\r\n",
+      "[ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ]\r\n",
+      "[ [ \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m ], [ \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m ] ]\r\n",
+      "[ [ \u001b[33m1\u001b[39m ], \u001b[33m2\u001b[39m ]\r\n",
+      "[\r\n",
+      "  \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m,\r\n",
+      "  \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m1\u001b[39m,\r\n",
+      "  \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m, \u001b[33m5\u001b[39m, \u001b[33m1\u001b[39m, \u001b[33m2\u001b[39m, \u001b[33m3\u001b[39m, \u001b[33m4\u001b[39m,\r\n",
+      "  \u001b[33m5\u001b[39m\r\n",
+      "]\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ts-node ts-files/flatten.ts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000c4f96",
+   "id": "87c2ae60",
    "metadata": {},
    "outputs": [],
    "source": []
