--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "05f1c2f8",
    "metadata": {},
    "outputs": [
@@ -828,6 +828,7 @@
       "3\n",
       "10\n",
       "2.5\n",
+      "2\n",
       "1\n",
       "\n",
       "Comparison Operators:\n",
@@ -891,7 +892,7 @@
        "undefined"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,6 +907,7 @@
     "  console.log(a - b); // Subtraction: 3\n",
     "  console.log(a * b); // Multiplication: 10\n",
     "  console.log(a / b); // Division: 2.5\n",
+    "  console.log(Math.floor(a / b)); // Floor Division: 2\n",
     "  console.log(a % b); // Modulo: 1\n",
     "\n",
     "  // Comparison operators\n",
