Syncing Java+Python middle 1/3 to TS sheet.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -707,7 +707,9 @@
    "source": [
     "# Multiple Interfaces\n",
     "\n",
-    "TODO: find out if possible to overload in Duck where the signatures of name are different in CanFly and CanSwim (but more importantly, hope that never comes up).\n"
+    "TODO: find out if possible to overload in Duck where the signatures of name are different in CanFly and CanSwim (but more importantly, hope that never comes up).\n",
+    "\n",
+    "Name collisions are considered same method and must be compatible."
    ]
   },
   {
