--- a/typescript/Control Flow.ipynb
+++ b/typescript/Control Flow.ipynb
@@ -581,7 +581,9 @@
     "\n",
     "**can't run in jupyter**\n",
     "\n",
-    "Just like in Python, you can even **send in values** (use the _next_ call to do it).\n"
+    "Just like in Python, you can even **send in values** (use the _next_ call to do it).\n",
+    "\n",
+    "NOTE: not shown here, but you can also do `yield*` to yield multiple items from another generator.  This is useful for concatenating and things like that."
    ]
   },
   {
