--- a/typescript/Generics.ipynb
+++ b/typescript/Generics.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2565917d",
    "metadata": {},
@@ -65,12 +64,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3ab10524",
    "metadata": {},
    "source": [
-    "# More Specific Types\n"
+    "# More Specific Types\n",
+    "\n",
+    "You can also say `T extends Class1 & Class2` for multiple base types at same time."
    ]
   },
   {
@@ -136,7 +136,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "32c26f3f",
    "metadata": {},
@@ -211,7 +210,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "892bb829",
    "metadata": {},
@@ -273,7 +271,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "240a2db9",
    "metadata": {},
@@ -370,7 +367,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bebe25e2",
    "metadata": {},
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "c610bed9",
    "metadata": {},
    "outputs": [
@@ -400,7 +396,7 @@
        "undefined"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,13 +426,110 @@
     "  // just use nothing\n",
     "  const box2: Box<void> = new Box();\n",
     "  console.log(box2);\n",
-    "})();\n"
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "247c5a52",
+   "metadata": {},
+   "source": [
+    "# Covariance/Contravariance\n",
+    "\n",
+    "TS generics are not as strict as Java generics and do not require wildcards or a similar concept.  You can easily cast the whole array and it will only matter for type checks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "29bdec11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ MyClass {}, OtherClass {} ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {}\n",
+    "    class OtherClass {}\n",
+    "    \n",
+    "    const a: Array<Object> = [new MyClass(), new OtherClass()];\n",
+    "    const b = a as MyClass[];\n",
+    "    console.log(b);\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29e947e4",
+   "metadata": {},
+   "source": [
+    "# Creating new Generic Element\n",
+    "\n",
+    "Not allowed - T doesn't literally refer to the class/constructor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dc689b24",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 5, Character 24\n            return new T();\n_______________________^\nTS2693: 'T' only refers to a type, but is being used as a value here.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 5, Character 24",
+      "            return new T();",
+      "_______________________^",
+      "TS2693: 'T' only refers to a type, but is being used as a value here.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass<T> {\n",
+    "        f() {\n",
+    "            // console.log(T);\n",
+    "            return new T();\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyClass<number>();\n",
+    "    console.log(m.f());\n",
+    "})();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7abda8",
+   "id": "434f75c1",
    "metadata": {},
    "outputs": [],
    "source": []
