Completing in-progres JS/TS research items.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -4758,9 +4758,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb4cfa35",
+   "metadata": {},
+   "source": [
+    "# Call Signature\n",
+    "\n",
+    "A call signature goes in an __interface__ and cannot be implemented by a class.\n",
+    "\n",
+    "You can use it, like below, to represent a function, and add properties to that function in a type-protected way.\n",
+    "\n",
+    "You can even have multiple call signatures to represent multiple \"overloads\" (eg. optional parameters, etc.)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8eaae88d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "110\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    interface MyCallable {\n",
+    "        (x: number, y: number): number;\n",
+    "        (x: number): number;\n",
+    "        \n",
+    "        (x: string, y: string): string; // compiler didn't stop us!\n",
+    "        \n",
+    "        f(): void;\n",
+    "    }\n",
+    "    \n",
+    "    function fn(x: number, y: number = 100) {\n",
+    "        return x + y;\n",
+    "    }\n",
+    "    const callable = fn as MyCallable;\n",
+    "    callable.f = () => {};\n",
+    "    \n",
+    "    console.log(callable(10, 20));\n",
+    "    console.log(callable(10));\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ca10a1",
+   "metadata": {},
+   "source": [
+    "# Construct Signature\n",
+    "\n",
+    "A construct signature goes in an __interface__ and cannot be directly implemented by a class - meaning the class cannot directly implement the interface.\n",
+    "\n",
+    "But if you cast the class to the interface, the call signature will match propertly if the constructor matches.\n",
+    "\n",
+    "Note that the interface knows what the class is, so it's not a base interface really.\n",
+    "\n",
+    "This is one way to constrain what you can call a constructor with in JS library code, for instance.\n",
+    "\n",
+    "Though you can pass a class directly and call it like a constructor, that way doesn't provide type safety (because you have to pass it as simply `Function`), so that is what this is for.  TypeScript doesn't even allow you to do that (but JS does)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "3e06e3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    interface MyConstructable {\n",
+    "        new (name: string): MyClass;\n",
+    "        \n",
+    "        name: string;\n",
+    "    }\n",
+    "    \n",
+    "    class MyClass /*implements MyConstructable*/ {\n",
+    "        constructor(readonly name: string) {}\n",
+    "    }\n",
+    "    \n",
+    "    const ctor = MyClass as MyConstructable; // the 'as' isn't actually required here\n",
+    "    const m = new ctor('bob');\n",
+    "    console.log(m.name);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e8d5de3",
+   "id": "db2c21e2",
    "metadata": {},
    "outputs": [],
    "source": []
