--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1614,9 +1614,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d26fa61",
+   "metadata": {},
+   "source": [
+    "# Call Operator\n",
+    "\n",
+    "There is no operating overloading in TypeScript/JavaScript and thus no call operator.\n",
+    "\n",
+    "But since functions are objects, you can add properties to a function and treat it as an object, which would make it callable.  Then you could use a factory function to return instances of that function (eg. lambdas or function expressions inside the body).\n",
+    "\n",
+    "You could use the __call signature__ of an interface to make this type-safe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b8c614",
+   "metadata": {},
+   "source": [
+    "# Constructor as a Method Reference\n",
+    "\n",
+    "You can define an interface with a __construct signature__ inline with an anonymous type (or make a real interface if you want).\n",
+    "\n",
+    "You can also pass the class directly as a constructor function using this special form of the `typeof` operator (which differs from the JS usage on objects, which returns string)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3133c112",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        constructor() {}\n",
+    "        \n",
+    "        x = 10;\n",
+    "    }\n",
+    "    \n",
+    "    // TS won't allow this, but JS will\n",
+    "    /*\n",
+    "    function create(ctor: Function) {\n",
+    "        return new ctor();\n",
+    "    }\n",
+    "    */\n",
+    "    \n",
+    "    function createInstance(ctor: typeof MyClass) {\n",
+    "        return new ctor();\n",
+    "    }\n",
+    "\n",
+    "    function create(ctor: {new (): MyClass}) {\n",
+    "        return new ctor();\n",
+    "    }\n",
+    "    \n",
+    "    const m = createInstance(MyClass);\n",
+    "    console.log(m.x);\n",
+    "    \n",
+    "    const o = create(MyClass);\n",
+    "    console.log(o.x);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a5e2b48",
+   "id": "0cac9247",
    "metadata": {},
    "outputs": [],
    "source": []
