--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1688,9 +1688,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40caa8ab",
+   "metadata": {},
+   "source": [
+    "# User-Defined Type Guards\n",
+    "\n",
+    "This is basically a way to do custom __type narrowing__ in your own function.\n",
+    "\n",
+    "The function actually returns a `boolean` but claims to return a type guard expression.  The result of the function call tells TS whether the type guard is true or not.\n",
+    "\n",
+    "If the type guard is true, then any conditional block using this call will have __type narrowing__ automatically.\n",
+    "\n",
+    "You can't directly specify multiple guards together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d3af69cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    function isString(x: any): x is string {\n",
+    "        return typeof x === \"string\";\n",
+    "    }\n",
+    "    \n",
+    "    const s = 'hi';\n",
+    "    const n = 52;\n",
+    "    if (isString(s)) {\n",
+    "        console.log(s[0]);\n",
+    "    }\n",
+    "    if (isString(n)) {\n",
+    "        console.log(n[0]);\n",
+    "    }\n",
+    "})();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92fa0c39",
+   "metadata": {},
+   "source": [
+    "# Discriminated Unions\n",
+    "\n",
+    "This term refers to the fact that __switch__ and __conditions__ can tell you're using a __discriminant__ property of types in a type union to distinguish types.  Thus, it will provide __type narrowing__.\n",
+    "\n",
+    "This relies on a special syntax of putting a __tag__ in an interface (a property whose type is a string - and whose value is also that string when read by callers).\n",
+    "\n",
+    "The tag property must be \"implemented\" by classes implementing the interface, but TS makes sure the string matches or it won't compile."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "12d25507",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    // Define the shape types with a common discriminant property `type`\n",
+    "    interface Circle {\n",
+    "        type: \"circle\";\n",
+    "        radius: number;\n",
+    "    }\n",
+    "\n",
+    "    interface Square {\n",
+    "        type: \"square\";\n",
+    "        sideLength: number;\n",
+    "    }\n",
+    "\n",
+    "    // This is a discriminated union of Circle and Square\n",
+    "    type Shape = Circle | Square;\n",
+    "\n",
+    "    function getArea(shape: Shape): number {\n",
+    "        switch (shape.type) {\n",
+    "            case \"circle\":\n",
+    "                // TypeScript knows this is a Circle\n",
+    "                return Math.PI * shape.radius ** 2;\n",
+    "            case \"square\":\n",
+    "                // TypeScript knows this is a Square\n",
+    "                return shape.sideLength ** 2;\n",
+    "            default:\n",
+    "                // Exhaustiveness check\n",
+    "                const _exhaustiveCheck: never = shape;\n",
+    "                return _exhaustiveCheck;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    class MyCircle implements Circle {\n",
+    "        radius = 100;\n",
+    "        \n",
+    "        type: \"circle\"; // TS requires this, but won't let you mismatch it\n",
+    "    }\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5422c204",
+   "id": "516a3abf",
    "metadata": {},
    "outputs": [],
    "source": []
