Adding notes about Object.seal().

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1815,9 +1815,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "46b44dc4",
+   "metadata": {},
+   "source": [
+    "# Object.seal()\n",
+    "\n",
+    "`Object.seal()` stops an object from existing new properties or reconfiguring existing ones.  But it does not make the object immutable - the properties it already has can still be modified."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "955387d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "1000\n",
+      "undefined\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyClass {\n",
+    "        x = 100;\n",
+    "        f() {\n",
+    "            this.x = 200;\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyClass();\n",
+    "    Object.seal(m);\n",
+    "    m.f();\n",
+    "    console.log(m.x);\n",
+    "    m.x = 1000;\n",
+    "    console.log(m.x);\n",
+    "    \n",
+    "    const a = m as any;\n",
+    "    a.y = 100; // silently ignored\n",
+    "    console.log(a.y);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "516a3abf",
+   "id": "ef231679",
    "metadata": {},
    "outputs": [],
    "source": []
