Adding notes for Web Workers & PWAs.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -827,9 +827,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cb70125",
+   "metadata": {},
+   "source": [
+    "# Web Workers\n",
+    "\n",
+    "Web Workers are a way to have multithreading in a JS application, but without a shared memory space.\n",
+    "\n",
+    "The basic idea is that you spawn workers (type `Worker` in JS) with their own .js files, and then you can send/receive messages with the workers.  The workers can't see the DOM or the memory of the main thread."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cd9dab9",
+   "metadata": {},
+   "source": [
+    "# Progressive Web Apps (PWAs)\n",
+    "\n",
+    "A JS app can register itself as a PWA, using __service workers__ to do work offline (eg. pre-fetch data from a page before it's needed).  PWAs can be added as apps on mobile devices as if they were native apps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f97a81",
+   "id": "52d36075",
    "metadata": {},
    "outputs": [],
    "source": []
