Clarification about discriminated unions.

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1755,7 +1755,9 @@
     "\n",
     "This relies on a special syntax of putting a __tag__ in an interface (a property whose type is a string - and whose value is also that string when read by callers).\n",
     "\n",
-    "The tag property must be \"implemented\" by classes implementing the interface, but TS makes sure the string matches or it won't compile."
+    "The tag property must be \"implemented\" by classes implementing the interface, but TS makes sure the string matches or it won't compile.\n",
+    "\n",
+    "NOTE: you can call the tag property whatever you want and have different tags for different purposes (eg. different types of interfaces being discriminated between)"
    ]
   },
   {
