Adding TS+JS version info (and some new features).

--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -938,6 +938,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f4bf356",
+   "metadata": {},
+   "source": [
+    "# WeakRef\n",
+    "\n",
+    "`WeakRef` is a fairly new class that lets you hold a weak reference (doesn't prevent garbage collection) to an object.\n",
+    "\n",
+    "```TypeScript\n",
+    "const w = new WeakRef(o);\n",
+    "console.log(w.deref()); // undefined if already garbage collected\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb6e2272",
    "metadata": {},
    "source": [
