--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1610,7 +1610,7 @@
    "source": [
     "# Recursion in General\n",
     "\n",
-    "Works just like other languages - you call the function itself from inside the function.  No TCO."
+    "Works just like other languages - you call the function itself from inside the function.  No TCO.  It's technically in the spec, but browsers don't do it."
    ]
   },
   {
