--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -1875,9 +1875,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35fb14da",
+   "metadata": {},
+   "source": [
+    "# Exponentiation\n",
+    "\n",
+    "The `**` operator for exponentiation (like in Python) was added fairly recently."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4fdac8b",
+   "metadata": {},
+   "source": [
+    "# Logical Assignment Operators\n",
+    "\n",
+    "`&&=` behaves as if you did `a = a && b`\n",
+    "\n",
+    "`||=` behaves as if you did `a = a || b`\n",
+    "\n",
+    "`??=` behaves as if you did `a = a ?? b`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "78f9c958",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "0\n",
+      "0\n",
+      "1000\n",
+      "300\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    let x = 100;\n",
+    "    x &&= 200;\n",
+    "    \n",
+    "    console.log(x);\n",
+    "    \n",
+    "    x &&= 0;\n",
+    "    console.log(x);\n",
+    "    \n",
+    "    x &&= 100;\n",
+    "    console.log(x);\n",
+    "    \n",
+    "    x ||= 1000;\n",
+    "    console.log(x);\n",
+    "    \n",
+    "    x = undefined;\n",
+    "    x ??= 300;\n",
+    "    console.log(x);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef231679",
+   "id": "2225a769",
    "metadata": {},
    "outputs": [],
    "source": []
